--- a/docs/src/docs/asciidoc/index.adoc
+++ b/docs/src/docs/asciidoc/index.adoc
@@ -3,6 +3,10 @@ Cédric Champeau
 
 This plugin adds support for including Git repositories as source dependencies in Gradle builds, making multi-repository development much easier to deal with!
 
+This plugin has been successfully tested on Gradle {tested-versions}.
+Earlier releases are not supported.
+The following Gradle versions are known to be broken with this plugin: {broken-versions}.
+
 == Rationale
 
 Multi-repository development, while providing architectural advantages (reduced scope of libraries, faster development cycles, ...), are often painful for developers, especially when the number of modules being involved grows.
@@ -77,7 +81,7 @@ gitRepositories {
 
 [role="multi-language-sample",subs="attributes+"]
 ```kotlin
-gitRepositories {
+configure<me.champeau.gradle.igp.GitIncludeExtension> {
     include("jdoctor") {
         uri.set("git@github.com:melix/jdoctor.git")
         // optional, set what branch to use
@@ -173,7 +177,7 @@ gitRepositories {
 
 [role="multi-language-sample",subs="attributes+"]
 ```kotlin
-gitRepositories {
+configure<me.champeau.gradle.igp.GitIncludeExtension> {
     include("myrepo") {
         // ...
         authentication {
@@ -210,7 +214,7 @@ gitRepositories {
 
 [role="multi-language-sample",subs="attributes+"]
 ```kotlin
-gitRepositories {
+configure<me.champeau.gradle.igp.GitIncludeExtension> {
     defaultAuthentication {
         sshWithPublicKey()
     }
