Make the Kotlin DSL version more elegant
This commit introduces an extension function for the Kotlin DSL,
to workaround the fact there's no automatic extension function
generation for the settings.

--- a/docs/src/docs/asciidoc/index.adoc
+++ b/docs/src/docs/asciidoc/index.adoc
@@ -54,6 +54,8 @@ plugins {
 
 [role="multi-language-sample",subs="attributes+"]
 ```kotlin
+import me.champeau.gradle.igp.gitRepositories
+
 plugins {
     id("me.champeau.include.git") version "{gradle-project-version}"
 }
