--- a/docs/src/docs/asciidoc/index.adoc
+++ b/docs/src/docs/asciidoc/index.adoc
@@ -215,7 +215,7 @@ NOTE: You may use several `includeBuild` statements from a single repository.
 The plugin supports 3 different authentication mechanisms:
 
 - basic authentication (username + password)
-- ssh with public key
+- ssh with public key (plaintext or encrypted)
 - ssh with password
 
 Authentication can be configured per repository:
@@ -236,6 +236,7 @@ gitRepositories {
             // or
             sshWithPublicKey {
                 privateKey = file("/path/to/private/key")
+                passphrase = '...'
             }
             // or
             sshWithPassword {
@@ -261,6 +262,7 @@ gitRepositories {
             // or
             sshWithPublicKey {
                 privateKey.set(file("/path/to/private/key"))
+                passphrase.set("...")
             }
             // or
             sshWithPassword {
